--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,18 +12,28 @@
 
 <div class="container">
   <h2>Login</h2>
-  <form class="form-horizontal" name="loginForm">
+  <form action="/action_page.php">
     <div class="form-group">
-        <label for="exampleInputEmail1">Username</label>
-        <input type="text" name ="username" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+      <div class="row">
+        <div class="col-sm-4"> 
+      <label for="email">Email:</label>
+      <input #email type="email" class="form-control" placeholder="Enter email" name="email">
       </div>
-      <div class="form-group">
-        <label for="exampleInputPassword1">Password</label>
-        <input type="password" name="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
-      </div>
-      <button type="button" (click) = "login();" class="btn btn-primary">Submit</button>
+    </div>
+    </div>
+    <div class="form-group">
+        <div class="row">
+        <div class="col-sm-4">
+      <label for="pwd">Password:</label>
+      <input #pwd type="password" class="form-control" placeholder="Enter password" name="pwd">
+    </div>
+    </div>
+    </div>
+    <div class="checkbox">
+      <label><input type="checkbox" name="remember"> Remember me</label>
+    </div>
+    <button type="submit" class="btn btn-default" (click) = "login(email.value)">Submit</button>
   </form>
 </div>
-
 </body>
 </html>
