--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,17 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <title>Dev Ops Application</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
-</head>
-<body>
-
 <div class="container">
-  <h2>Login</h2>
+  <h2>{{headerValue}}</h2>
   <form action="/action_page.php">
     <div class="form-group">
       <div class="row">
@@ -35,5 +23,3 @@
     <button type="submit" class="btn btn-default" (click) = "login(email.value)">Submit</button>
   </form>
 </div>
-</body>
-</html>
