--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,6 +20,6 @@
     <div class="checkbox">
       <label><input type="checkbox" name="remember"> Remember me</label>
     </div>
-    <button type="submit" class="btn btn-default" (click) = "login(email.value)">Submit</button>
+    <button type="submit" class="btn btn-success" (click) = "login(email.value)">Submit</button>
   </form>
 </div>
